[package]
name = "pigeon"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

# [workspace]
# members = ["programs/*"]
# resolver = "2"


[lib]
crate-type = ["cdylib", "lib"]
name = "pigeon"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
